# ad-analyser

./: .gitignore  DATASET_LICENSE.md  README.md  pyproject.toml
data/: synthetic_ru_private_ads_50cats_10000_v2.csv
notebooks/: ._02_Baseline_TFIDF_Supervised.ipynb  ._03_RuBERT_Main_Finetune_OOD.ipynb  ._04_SubHeads_Autos_Aparts_ThinHeads.ipynb  ._05_Inference_Pipeline_Final.ipynb  ._06_Eval_Thresholds_and_Calibration.ipynb  01_Data_EDA.ipynb  02_Baseline_TFIDF_Supervised.ipynb  03_RuBERT_Main_Finetune_OOD.ipynb  04_SubHeads_Autos_Aparts_ThinHeads.ipynb  05_Inference_Pipeline_Final.ipynb  06_Eval_Thresholds_and_Calibration.ipynb
notebooks/appendix/: ._A1_CrossEncoder_Reranking_Colab.ipynb  ._A2_Archived_Ensemble_RuBERT.ipynb  ._A3_Threshold_Tuning_Experiments.ipynb  A1_CrossEncoder_Reranking_Colab.ipynb  A2_Archived_Ensemble_RuBERT.ipynb  A3_Threshold_Tuning_Experiments.ipynb
