[project]
name = "report-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxim",email = "nkvmaxim@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "jupyterlab (>=4.4.6,<5.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "razdel (>=0.5.0,<0.6.0)",
    "pymorphy3 (>=2.0.4,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "numpy (==2.0.*)",
    "numba (==0.60.*)",
    "llvmlite (==0.43.*)",
    "umap-learn (>=0.5.6,<0.6)",
    "hdbscan (>=0.8.40)",
    "spacy (>=3.8.7,<4.0.0)",
    "optuna (>=4.5.0,<5.0.0)",
    "mlflow (>=3.3.2,<4.0.0)",
    "sentence-transformers (>=3.0.0,<4.0.0)",
    "transformers (>=4.40.0,<5.0.0)",
    "torch (>=2.2.0,<3.0.0)",
    "onnxruntime (==1.18.*)",
    "datasets (>=2.19.0,<3.0.0)",
    "evaluate (>=0.4.0,<1.0.0)",
    "accelerate (>=1.0.0,<2.0.0)",
    "rapidfuzz (>=3.9,<4.0)",
    "ipython (>=8.0,<9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
